--- a/_css/main.scss
+++ b/_css/main.scss
@@ -61,5 +61,6 @@
 @import "components/pastor";
 @import "components/main";
 @import "components/gallery"; 
+@import "components/events"; 
 @import "components/contact";  
  
