--- a/_css/components/_events.sass
+++ b/_css/components/_events.sass
@@ -15,12 +15,23 @@
         padding-top: 22px
         padding-bottom: 22px
         display: flex
-
-        img
-            width: 600px
-            max-width: 100%
-            margin-right: 40px
+        flex-direction: column
+        @include breakpoint(medium)
+            flex-direction: row
+        .image
+            width: 100%
+            margin-right: 0
+            margin-bottom: 25px
+            @include breakpoint(medium)
+                width: 60%
+                margin-right: 40px
+                margin-bottom: 25px
         .details
+            width: 100%
+            @include breakpoint(medium)
+                width: 35%
+                min-width: 245px
+                flex-grow: 2
             h4
                 font-size: 24px
                 font-weight: bold
@@ -49,5 +60,42 @@
                 font-size: 14px
                 font-weight: bold
                 text-decoration: underline
+    .single-event
+        display: flex
+        border-top: 1px solid #979797
+        
+        .date-display
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center 
+            width: 100px
+            p.number
+                font-size: 30px
+                margin-bottom: 0
+                line-height: 30px
+                font-weight: bold
+            p.month
+                font-size: 20px
+                margin-bottom: 0
+                line-height: 30px
+                font-weight: bold
+                text-transform: uppercase
+        .event-info
+            h4
+                font-weight: bold
+                font-size: 22px
+                margin: 21px 0 6px 0
+                a
+                    color: $black
+            p.date
+                margin: 0
+                font-size: 18px
+                line-height: 18px
+            p.time
+                margin: 0 0 21px 0
+                font-size: 18px
+                line-height: 18px
+
 
 
