--- a/_css/components/_contact.sass
+++ b/_css/components/_contact.sass
@@ -1,23 +1,11 @@
 div.contact 
     max-width: 1200px
-    padding: 30px
+    padding: 40px
     margin-left: auto
     margin-right: auto
 
-    .contact-content
-        max-width: 600px
+    h2
+        font-size: 36px
+        font-weight: bold
 
-        a, a:visited 
-            color: #617B95
-
-
-        ul.address
-            list-style-type: none
-            padding-left: 0
-            margin-left: 0
-
-            li:nth-child(3)
-                padding-left: 14px
-
-            li a 
-                color: #617B95
+    
